fix accordion spacing

--- a/src/accordion/accordion.module.scss
+++ b/src/accordion/accordion.module.scss
@@ -18,7 +18,7 @@
 
     .accordion-content {
       @include clearfix;
-      padding: 20px 15px;
+      padding: 20px 0 5px 15px;
     }
   }
 
