--- a/src/styles/card.module.scss
+++ b/src/styles/card.module.scss
@@ -82,7 +82,7 @@
     padding: 0;
     cursor: move;
     transition: border-color 0.3s;
-    margin: 0 10px 10px 0;
+    margin: 0 15px 15px 0;
     display: inline-flex;
 
     &:hover {
